<resources>

    <string name="app_name" translatable="false">Music Player GO EX</string>
    <string name="space_delimiter" translatable="false">&#160;</string>
    <string name="underscore_delimiter" translatable="false">&#95;</string>

    <!-- Fragments titles -->
    <string name="artists">Artists</string>
    <string name="music">All songs</string>
    <string name="folders">Folders</string>
    <string name="settings">Settings &amp; info</string>

    <!-- Permissions -->
    <string name="perm_rationale">Music Player GO EX needs access to your files to play music!</string>

    <!-- Error strings-->
    <string name="error_unknown">Something went wrong! :(</string>
    <string name="unknown_year" translatable="false">N&#x2F;A</string>
    <string name="error_no_music">No music found on your phone!</string>
    <string name="error_get_resource">Oops!! Not found!</string>

    <!-- UI titles -->
    <string name="artist_and_album">%1s&#160;-&#160;%2s</string>
    <string name="artist_count">%1d&#160;Albums&#160;-&#160;%2d&#160;Tracks</string>
    <string name="in_directory">in&#160;%1s</string>
    <string name="track_song">%1d&#160;-&#160;%2s</string>

    <!-- Preferences -->
    <string name="category_appearance">Appearance</string>
    <string name="category_general">General</string>

    <string name="theme_pref" translatable="false">theme_pref</string>
    <string name="theme_pref_title">Theme</string>
    <string name="theme_pref_light_title">Light</string>
    <string name="theme_pref_dark_title">Dark</string>
    <string name="theme_pref_auto_title">Automatic</string>

    <string name="theme_pref_light" translatable="false">theme_pref_light</string>
    <string name="theme_pref_dark" translatable="false">theme_pref_dark</string>
    <string name="theme_pref_auto" translatable="false">theme_pref_auto</string>

    <string name="accent_pref" translatable="false">accent_pref</string>
    <string name="accent_pref_title">Accent</string>

    <string name="immersive_pref" translatable="false">immersive_pref</string>
    <string name="immersive_pref_title">Immersive mode</string>
    <string name="immersive_pref_summary_on">Disable immersive mode</string>
    <string name="immersive_pref_summary_off">Enable immersive mode</string>

    <string name="active_fragments_pref" translatable="false">active_fragments_pref</string>
    <string name="active_fragments_pref_title">Active tabs</string>
    <string name="active_fragments_pref_warning">You just can\'t remove all tabs! :P</string>

    <string name="fast_scroll_pref" translatable="false">fast_scroll_pref</string>
    <string name="fast_scroll_pref_title">Indicator fast scroll</string>
    <string name="fast_scroll_pref_summary_on">Disable indicator fast scroll</string>
    <string name="fast_scroll_pref_summary_off">Enable indicator fast scroll</string>

    <string name="search_bar_pref" translatable="false">search_bar_pref</string>
    <string name="search_bar_pref_title">Search bar</string>
    <string name="search_bar_pref_summary_on">Disable search bar</string>
    <string name="search_bar_pref_summary_off">Enable search bar</string>

    <string name="artists_sorting_pref" translatable="false">artists_sorting_pref</string>
    <string name="folders_sorting_pref" translatable="false">folders_sorting_pref</string>
    <string name="sorting_pref_default">Default</string>
    <string name="sorting_pref_ascending">Ascending</string>
    <string name="sorting_pref_descending">Descending</string>

    <string name="hidden_items_pref" translatable="false">hidden_items_pref</string>
    <string name="hidden_items_pref_title">Hidden items</string>
    <string name="hidden_items_pref_message">%1s will be hidden. Are you sure?</string>
    <string name="hidden_item_pref_result">%1s has been hidden!</string>
    <string name="hidden_items_pref_undo">Undo</string>
    <string name="hidden_items_pref_empty">No hidden items found!</string>

    <string name="hex" translatable="false">&#35;%06X</string>
</resources>
