<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/category_appearance">

        <ListPreference
            app:defaultValue="@string/theme_pref_light"
            app:dialogTitle="@string/theme_pref_title"
            app:entries="@array/themeListArray"
            app:entryValues="@array/themeEntryArray"
            app:key="@string/theme_pref"
            app:title="@string/theme_pref_title"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:icon="@drawable/ic_colorize"
            app:key="@string/accent_pref"
            app:title="@string/accent_pref_title" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/category_general">

        <Preference
            app:dialogTitle="@string/active_fragments_pref_title"
            app:key="@string/active_fragments_pref"
            app:title="@string/active_fragments_pref_title" />

        <SwitchPreference
            app:defaultValue="true"
            app:dialogTitle="@string/fast_scroll_pref_title"
            app:key="@string/fast_scroll_pref"
            app:title="@string/fast_scroll_pref_title"
            app:summaryOn="@string/fast_scroll_pref_summary_on"
            android:summaryOff="@string/fast_scroll_pref_summary_off"/>

        <SwitchPreference
            app:defaultValue="true"
            app:dialogTitle="@string/search_bar_pref_title"
            app:key="@string/search_bar_pref"
            app:title="@string/search_bar_pref_title"
            app:summaryOn="@string/search_bar_pref_summary_on"
            android:summaryOff="@string/search_bar_pref_summary_off"/>

        <Preference
            app:key="@string/hidden_items_pref"
            app:title="@string/hidden_items_pref_title" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
